# chat-aggregator-terminal

./: .gitignore  LICENSE  README.md  build.bat  build.sh  chat_aggregator.spec  package-lock.json  package.json  pyproject.toml
chat_tui/: __main__.py  app.py  bus.py  conn_state.py  emoji_safe.py  settings.py  theme.py
chat_tui/services/: kick_client.py  node_backend.py  remote_feed.py  server_client.py  twitch_irc.py  twitch_oauth.py
chat_tui/ui/: __init__.py  alert_log.py  chat_feed.py  command_hints.py  composer.py  log_overlay.py  settings_modal.py  status_ticker.py  viewer_bar.py
docs/superpowers/plans/: 2026-07-07-chat-aggregator-tui-visual-redesign.md
docs/superpowers/specs/: 2026-07-07-chat-aggregator-tui-visual-redesign-design.md
server/: index.js
tests/: test_emoji_safe.py  test_log_overlay.py  test_node_backend.py  test_resilience.py  test_settings_modal.py  test_twitch_oauth.py
