[project]
name = "chat-aggregator-tui"
version = "0.1.0"
description = "Chaos Foundry chat aggregator — terminal-native, cyber sexy"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.86.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
chat-aggregator = "chat_tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_tui"]